Cleaned up the inline demo controls template.

--- a/inline.html
+++ b/inline.html
@@ -24,7 +24,7 @@
           <a href="#" title="Emphasis" class="command em" command="em"><div>Emphasis</div></a> \
           <a href="#" title="Strong" class="command strong" command="strong"><div>Strong</div></a> \
           <a href="#" title="Code" class="command code" command="code"><div>Code</div></a> \
-          <a title="List" href="#" class="command link" command="link"><div>Link</div></a> \
+          <a href="#" title="List" class="command link" command="link"><div>Link</div></a> \
         </div> ';
       
       window.editor = new Proper({ controlsTpl: template });
